<resources>
    <string name="app_name">Write</string>

    <string name="FirstNameText">First Name :</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="SecondNameTextField">Enter Second Name</string>
    <string name="LastNameText">Last Name :</string>
    <string name="submitButton">Register</string>
    <string name="List_of_Users_text">List Of Registered Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UserNameTextView">User Name:</string>
    <string name="UsernameTextField">Enter User Name</string>
    <string name="backButton">Back</string>
    <string name="Login_text">Login</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign Up!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="cancel">Cancel</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="textview">TextView</string>
    <string name="lastname">lastname</string>
    <string name="firstname">firstname</string>
    <string name="posts">TextView</string>
    <string name="share_button">share button</string>
    <string name="emails">Email:</string>
</resources>